--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>About Project</title>
     <link rel="stylesheet" href="../css/global.css" />
   </head>
@@ -52,116 +56,120 @@
                 <h4>სანდრო ასათიანი</h4>
                 <p>ოუნერი</p>
                 <div class="linkProfile">
-                  <a href=""> <img src="../assets/github-1.svg" alt="" /></a>
-                  <a href=""> <img src="../assets/linkedin-3.svg" alt="" /></a>
+                  <a href="#" class="fa fa-github" target="_blank"></a>
+                  <a href="#" class="fa fa-linkedin-square" target="_blank"></a>
                 </div>
               </div>
               <div class="team-info">
                 <h4>თემო ჩიჩუა</h4>
                 <p>ოუნერი Back-End დეველოპერი</p>
                 <div class="linkProfile">
-                  <a href=""> <img src="../assets/github-1.svg" alt="" /></a>
+                  <a href="#" class="fa fa-github" target="_blank"></a>
+                  <a href="#" class="fa fa-linkedin-square" target="_blank"></a>
                 </div>
               </div>
               <div class="team-info">
                 <h4>ანანო ასპანიძე</h4>
                 <p>პროექტის მენეჯერი (ჰედი)</p>
                 <div class="linkProfile">
-                  <a href=""> <img src="../assets/linkedin-3.svg" alt="" /></a>
+                  <a href="#" class="fa fa-github" target="_blank"></a>
+                  <a href="#" class="fa fa-linkedin-square" target="_blank"></a>
                 </div>
               </div>
               <div class="team-info">
                 <h4>ნენე არაბული</h4>
                 <p>დიზაინი (ჰედი)</p>
                 <div class="linkProfile">
-                  <a href=""> <img src="../assets/github-1.svg" alt="" /></a>
-                  <a href=""> <img src="../assets/linkedin-3.svg" alt="" /></a>
+                  <a href="#" class="fa fa-github" target="_blank"></a>
+                  <a href="#" class="fa fa-linkedin-square" target="_blank"></a>
                 </div>
               </div>
               <div class="team-info">
                 <h4>მარიშა არაბული</h4>
                 <p>დიზაინი (ჰედი)</p>
                 <div class="linkProfile">
-                  <a href=""> <img src="../assets/github-1.svg" alt="" /></a>
-                  <a href=""> <img src="../assets/linkedin-3.svg" alt="" /></a>
+                  <a href="#" class="fa fa-github" target="_blank"></a>
+                  <a href="#" class="fa fa-linkedin-square" target="_blank"></a>
                 </div>
               </div>
               <div class="team-info">
                 <h4>ეკატერინა ხარბედია</h4>
                 <p>დიზაინი (ჰედი)</p>
                 <div class="linkProfile">
-                  <a href=""> <img src="../assets/github-1.svg" alt="" /></a>
+                  <a href="#" class="fa fa-github" target="_blank"></a>
+                  <a href="#" class="fa fa-linkedin-square" target="_blank"></a>
                 </div>
               </div>
               <div class="team-info">
                 <h4>ნოკა ყიფიანი</h4>
                 <p>Front-End დეველოპერი</p>
                 <div class="linkProfile">
-                  <a href=""> <img src="../assets/linkedin-3.svg" alt="" /></a>
+                  <a href="#" class="fa fa-github" target="_blank"></a>
+                  <a href="#" class="fa fa-linkedin-square" target="_blank"></a>
                 </div>
               </div>
               <div class="team-info">
                 <h4>დავით ცალანი</h4>
                 <p>Front-End დეველოპერი</p>
                 <div class="linkProfile">
-                  <a href=""> <img src="../assets/github-1.svg" alt="" /></a>
-                  <a href=""> <img src="../assets/linkedin-3.svg" alt="" /></a>
+                  <a href="#" class="fa fa-github" target="_blank"></a>
+                  <a href="#" class="fa fa-linkedin-square" target="_blank"></a>
                 </div>
               </div>
               <div class="team-info">
                 <h4>დავით ჭინჭარაშვილი</h4>
                 <p>Back-End დეველოპერი</p>
                 <div class="linkProfile">
-                  <a href=""> <img src="../assets/github-1.svg" alt="" /></a>
-                  <a href=""> <img src="../assets/linkedin-3.svg" alt="" /></a>
+                  <a href="#" class="fa fa-github" target="_blank"></a>
+                  <a href="#" class="fa fa-linkedin-square" target="_blank"></a>
                 </div>
               </div>
               <div class="team-info">
                 <h4>გიორგი მხეიძე</h4>
                 <p>პროექტის მენეჯერი</p>
                 <div class="linkProfile">
-                  <a href=""> <img src="../assets/github-1.svg" alt="" /></a>
-                  <a href=""> <img src="../assets/linkedin-3.svg" alt="" /></a>
+                  <a href="#" class="fa fa-github" target="_blank"></a>
+                  <a href="#" class="fa fa-linkedin-square" target="_blank"></a>
                 </div>
               </div>
               <div class="team-info">
                 <h4>ოთო ბენიაიძე</h4>
                 <p>დიზაინი</p>
                 <div class="linkProfile">
-                  <a href=""> <img src="../assets/github-1.svg" alt="" /></a>
-                  <a href=""> <img src="../assets/linkedin-3.svg" alt="" /></a>
+                  <a href="#" class="fa fa-github" target="_blank"></a>
+                  <a href="#" class="fa fa-linkedin-square" target="_blank"></a>
                 </div>
               </div>
               <div class="team-info">
                 <h4>ლუკა ბლიაძე</h4>
                 <p>Front-End დეველოპერი</p>
                 <div class="linkProfile">
-                  <a href=""> <img src="../assets/github-1.svg" alt="" /></a>
-                  <a href=""> <img src="../assets/linkedin-3.svg" alt="" /></a>
+                  <a href="#" class="fa fa-github" target="_blank"></a>
+                  <a href="#" class="fa fa-linkedin-square" target="_blank"></a>
                 </div>
               </div>
               <div class="team-info">
                 <h4>მერი გოგიჩაშვილი</h4>
                 <p>Front-End დეველოპერი</p>
                 <div class="linkProfile">
-                  <a href=""> <img src="../assets/github-1.svg" alt="" /></a>
-                  <a href=""> <img src="../assets/linkedin-3.svg" alt="" /></a>
+                  <a href="#" class="fa fa-github" target="_blank"></a>
+                  <a href="#" class="fa fa-linkedin-square" target="_blank"></a>
                 </div>
               </div>
               <div class="team-info">
                 <h4>გიორგი ბიწაძე</h4>
                 <p>Front-End დეველოპერი</p>
                 <div class="linkProfile">
-                  <a href=""> <img src="../assets/github-1.svg" alt="" /></a>
-                  <a href=""> <img src="../assets/linkedin-3.svg" alt="" /></a>
+                  <a href="#" class="fa fa-github" target="_blank"></a>
+                  <a href="#" class="fa fa-linkedin-square" target="_blank"></a>
                 </div>
               </div>
               <div class="team-info">
                 <h4>ნიკა ქვრივიშვილი</h4>
                 <p>Back-End დეველოპერი</p>
                 <div class="linkProfile">
-                  <a href=""> <img src="../assets/github-1.svg" alt="" /></a>
-                  <a href=""> <img src="../assets/linkedin-3.svg" alt="" /></a>
+                  <a href="#" class="fa fa-github" target="_blank"></a>
+                  <a href="#" class="fa fa-linkedin-square" target="_blank"></a>
                 </div>
               </div>
             </div>
