--- a/pages/authorization.html
+++ b/pages/authorization.html
@@ -89,7 +89,14 @@
               პაროლის აღდგენა
             </button>
           </div>
-          <button type="button" class="enter" id="enter">შესვლა</button>
+          <button
+            onclick="location.href='./mathProblems.html'"
+            type="button"
+            class="enter"
+            id="enter"
+          >
+            შესვლა
+          </button>
           <button
             onclick="location.href='registration.html'"
             type="button"
