--- a/pages/mathProblems.html
+++ b/pages/mathProblems.html
@@ -45,7 +45,7 @@
             <div class="bgPen">
               <img src="../assets/Icon material-edit.svg" alt="" />
             </div>
-            <span>პროფილის რედაქტირება</span>
+            <span>ინფორმაციის რედაქტირება</span>
           </a>
         </div>
         <div class="logOut">
@@ -130,16 +130,16 @@
                   >
                   <div class="totalAnswer">
                     <span> სულ: 3</span>
-                    <div style="background-color: rgb(107, 203, 119)">
+                    <div style="background-color: rgb(107, 203, 119, 0.5)">
                       <img src="../assets/Icondone.svg" alt="" /> 1
                     </div>
-                    <div style="background-color: rgb(254, 209, 66)">
+                    <div style="background-color: rgb(254, 209, 66, 0.5)">
                       <img src="../assets/Icondone.svg" alt="" /> 1
                     </div>
-                    <div style="background-color: rgb(255, 107, 107)">
+                    <div style="background-color: rgb(255, 107, 107, 0.5)">
                       <img src="../assets/icon-cancel.svg" alt="" /> 1
                     </div>
-                    <a href="">
+                    <a href="./internPage.html">
                       გახსნა <img src="../assets/Icon-navigate-next.svg" alt=""
                     /></a>
                   </div>
@@ -148,16 +148,16 @@
                   <span class="taskTitle">სამკუთხედის ფართობი</span>
                   <div class="totalAnswer">
                     <span> სულ: 3</span>
-                    <div style="background-color: rgb(107, 203, 119)">
+                    <div style="background-color: rgb(107, 203, 119, 0.5)">
                       <img src="../assets/Icondone.svg" alt="" /> 1
                     </div>
-                    <div style="background-color: rgb(254, 209, 66)">
+                    <div style="background-color: rgb(254, 209, 66, 0.5)">
                       <img src="../assets/Icondone.svg" alt="" /> 1
                     </div>
-                    <div style="background-color: rgb(255, 107, 107)">
+                    <div style="background-color: rgb(255, 107, 107, 0.5)">
                       <img src="../assets/icon-cancel.svg" alt="" /> 1
                     </div>
-                    <a href="">
+                    <a href="./internPage.html">
                       გახსნა <img src="../assets/Icon-navigate-next.svg" alt=""
                     /></a>
                   </div>
@@ -168,16 +168,16 @@
                   >
                   <div class="totalAnswer">
                     <span> სულ: 3</span>
-                    <div style="background-color: rgb(107, 203, 119)">
+                    <div style="background-color: rgb(107, 203, 119, 0.5)">
                       <img src="../assets/Icondone.svg" alt="" /> 1
                     </div>
-                    <div style="background-color: rgb(254, 209, 66)">
+                    <div style="background-color: rgb(254, 209, 66, 0.5)">
                       <img src="../assets/Icondone.svg" alt="" /> 1
                     </div>
-                    <div style="background-color: rgb(255, 107, 107)">
+                    <div style="background-color: rgb(255, 107, 107, 0.5)">
                       <img src="../assets/icon-cancel.svg" alt="" /> 1
                     </div>
-                    <a href="">
+                    <a href="./internPage.html">
                       გახსნა <img src="../assets/Icon-navigate-next.svg" alt=""
                     /></a>
                   </div>
@@ -186,16 +186,52 @@
                   <span class="taskTitle">სამკუთხედის ფართობი</span>
                   <div class="totalAnswer">
                     <span> სულ: 3</span>
-                    <div style="background-color: rgb(107, 203, 119)">
+                    <div style="background-color: rgb(107, 203, 119, 0.5)">
                       <img src="../assets/Icondone.svg" alt="" /> 1
                     </div>
-                    <div style="background-color: rgb(254, 209, 66)">
+                    <div style="background-color: rgb(254, 209, 66, 0.5)">
                       <img src="../assets/Icondone.svg" alt="" /> 1
                     </div>
-                    <div style="background-color: rgb(255, 107, 107)">
+                    <div style="background-color: rgb(255, 107, 107, 0.5)">
                       <img src="../assets/icon-cancel.svg" alt="" /> 1
                     </div>
-                    <a href="">
+                    <a href="./internPage.html">
+                      გახსნა <img src="../assets/Icon-navigate-next.svg" alt=""
+                    /></a>
+                  </div>
+                </div>
+                <div class="taskDisplay">
+                  <span class="taskTitle">სამკუთხედის ფართობი</span>
+                  <div class="totalAnswer">
+                    <span> სულ: 3</span>
+                    <div style="background-color: rgb(107, 203, 119, 0.5)">
+                      <img src="../assets/Icondone.svg" alt="" /> 1
+                    </div>
+                    <div style="background-color: rgb(254, 209, 66, 0.5)">
+                      <img src="../assets/Icondone.svg" alt="" /> 1
+                    </div>
+                    <div style="background-color: rgb(255, 107, 107, 0.5)">
+                      <img src="../assets/icon-cancel.svg" alt="" /> 1
+                    </div>
+                    <a href="./internPage.html">
+                      გახსნა <img src="../assets/Icon-navigate-next.svg" alt=""
+                    /></a>
+                  </div>
+                </div>
+                <div class="taskDisplay">
+                  <span class="taskTitle">სამკუთხედის ფართობი</span>
+                  <div class="totalAnswer">
+                    <span> სულ: 3</span>
+                    <div style="background-color: rgb(107, 203, 119, 0.5)">
+                      <img src="../assets/Icondone.svg" alt="" /> 1
+                    </div>
+                    <div style="background-color: rgb(254, 209, 66, 0.5)">
+                      <img src="../assets/Icondone.svg" alt="" /> 1
+                    </div>
+                    <div style="background-color: rgb(255, 107, 107, 0.5)">
+                      <img src="../assets/icon-cancel.svg" alt="" /> 1
+                    </div>
+                    <a href="./internPage.html">
                       გახსნა <img src="../assets/Icon-navigate-next.svg" alt=""
                     /></a>
                   </div>
