--- a/pages/myProfile.html
+++ b/pages/myProfile.html
@@ -227,7 +227,7 @@
               <i class="far fa-check-circle success-icon"></i>
             </div>
           </div>
-          <div class="agree-policies-wrapper">
+          <!-- <div class="agree-policies-wrapper">
             <div class="policeDiv">
               <input
                 type="checkbox"
@@ -239,7 +239,7 @@
                 >ვეთანხმები <span>მონაცემების დამუშავებას</span></label
               >
             </div>
-          </div>
+          </div> -->
           <div class="my-profile-buttons">
             <button type="button" id="cancel-buttons" class="cancel-button">
               გაუქმება
