--- a/pages/internPage.html
+++ b/pages/internPage.html
@@ -110,17 +110,19 @@
       </div>
       <section class="modal" aria-hidden="true">
         <div class="modal-content">
-          <span class="close-button">×</span>
+          <span class="close-button" style="cursor: pointer">×</span>
           <div class="hint-title">
             <h3>მინიშნება</h3>
           </div>
           <div class="hintDescription">
             <h3>მეორე პრობლემა</h3>
             <div>
-              აღწერის გვერდზევე დაჩება ის რაც ამჟამინდელ დიზაინშია(რადგან ეგ
-              უნდა ჩაშენდეს და მისი დიზაინი ვერ შეიცვლება, მაგ ნაწილში იხსნება
-              დავალება) ax 2+bx+c=0 სურათები რაღაც მაგალითებად ჩავყარე ალბათ
-              როგორი შეიძლება იყოს ამოცანა. მეორე ფოტო
+              <p>
+                აღწერის გვერდზევე დაჩება ის რაც ამჟამინდელ დიზაინშია(რადგან ეგ
+                უნდა ჩაშენდეს და მისი დიზაინი ვერ შეიცვლება, მაგ ნაწილში იხსნება
+                დავალება) ax 2+bx+c=0 სურათები რაღაც მაგალითებად ჩავყარე ალბათ
+                როგორი შეიძლება იყოს ამოცანა. მეორე ფოტო
+              </p>
             </div>
           </div>
         </div>
